--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
 
 env:
  matrix:
@@ -20,11 +21,13 @@ env:
   - DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
+  - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql MOODLE_BRANCH=master
   - DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
+  - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=master
 
 matrix:
@@ -32,14 +35,22 @@ matrix:
     - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=MOODLE_34_STABLE
     - php: 5.6
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 5.6
       env: DB=pgsql MOODLE_BRANCH=master
     - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
+    - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
     - php: 5.6
       env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
     - php: 5.6
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
+    - php: 5.6
       env: DB=mysqli MOODLE_BRANCH=master
     - php: 7.1
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
+    - php: 7.2
       env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
 
 before_install:
