--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,10 @@ matrix:
       env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
     - php: 7.2
       env: DB=pgsql MOODLE_BRANCH=MOODLE_31_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_32_STABLE
+    - php: 7.2
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_33_STABLE
     - php: 5.6
       env: DB=mysqli MOODLE_BRANCH=MOODLE_34_STABLE
     - php: 5.6
@@ -52,6 +56,10 @@ matrix:
       env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
     - php: 7.2
       env: DB=mysqli MOODLE_BRANCH=MOODLE_31_STABLE
+    - php: 7.2
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_32_STABLE
+    - php: 7.2
+      env: DB=mysqli MOODLE_BRANCH=MOODLE_33_STABLE
 
 before_install:
   - cd ../..
