--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:10
+        image: postgres
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -22,7 +22,7 @@ jobs:
           - 5432:5432
 
       mariadb:
-        image: mariadb:10
+        image: mariadb:10.5
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -33,42 +33,22 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 3
+
     strategy:
       fail-fast: false
       matrix:
+        database: ['pgsql']
+        moodle-branch: ['MOODLE_39_STABLE', 'MOODLE_310_STABLE', 'MOODLE_311_STABLE', 'master']
+        php: ['7.2', '7.4']
+        exclude:
+          - moodle-branch: master
+            php: 7.2
+          - moodle-branch: MOODLE_311_STABLE
+            php: 7.2
         include:
-          - php: '7.3'
-            moodle-branch: 'MOODLE_39_STABLE'
-            database: 'mariadb'
-            node: '14.15'
-          - php: '7.3'
-            moodle-branch: 'MOODLE_39_STABLE'
-            database: 'pgsql'
-            node: '14.15'
-          - php: '7.3'
-            moodle-branch: 'MOODLE_310_STABLE'
-            database: 'mariadb'
-            node: '14.15'
-          - php: '7.3'
-            moodle-branch: 'MOODLE_310_STABLE'
-            database: 'pgsql'
-            node: '14.15'
-          - php: '7.3'
-            moodle-branch: 'MOODLE_311_STABLE'
-            database: 'mariadb'
-            node: '14.15'
-          - php: '7.3'
-            moodle-branch: 'MOODLE_311_STABLE'
-            database: 'pgsql'
-            node: '14.15'
-          - php: '7.4'
-            moodle-branch: 'MOODLE_400_STABLE'
-            database: 'pgsql'
-            node: '16.14'
-          - php: '7.4'
-            moodle-branch: 'MOODLE_400_STABLE'
-            database: 'pgsql'
-            node: '16.14'
+          - moodle-branch: master
+            php: 7.4
+            database: mariadb
 
     steps:
       - name: Check out repository code
@@ -76,16 +56,11 @@ jobs:
         with:
           path: plugin
 
-      - name: Install node  ${{ matrix.node }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-
       - name: Setup PHP ${{ matrix.php }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: pgsql, mysqli, zip, gd, xmlrpc, soap
+          ini-values: max_input_vars=5000
           coverage: none
 
       - name: Initialise moodle-plugin-ci
@@ -96,12 +71,10 @@ jobs:
           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
           # PHPUnit depends on en_AU.UTF-8 locale
           sudo locale-gen en_AU.UTF-8
+          echo "NVM_DIR=$HOME/.nvm" >> $GITHUB_ENV
+
       - name: Install Moodle
         run: |
-          mkdir ~/.npm-global
-          npm config set prefix '~/.npm-global'
-          export PATH=~/.npm-global/bin:$PATH
-          source ~/.profile
           moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
         env:
           DB: ${{ matrix.database }}
@@ -110,6 +83,16 @@ jobs:
       - name: Run phplint
         if: ${{ always() }}
         run: moodle-plugin-ci phplint
+
+      - name: Run phpcpd
+        continue-on-error: true # This step will show errors but will not fail
+        if: ${{ always() }}
+        run: moodle-plugin-ci phpcpd || true
+
+      - name: Run phpmd
+        continue-on-error: true # This step will show errors but will not fail
+        if: ${{ always() }}
+        run: moodle-plugin-ci phpmd
 
       - name: Run codechecker
         if: ${{ always() }}
@@ -126,22 +109,16 @@ jobs:
       - name: Run mustache
         continue-on-error: true # This step will show errors but will not fail
         if: ${{ always() }}
-        run: moodle-plugin-ci mustache
+        run: moodle-plugin-ci phpcpd
+
+      - name: Run grunt
+        if: ${{ always() }}
+        run: moodle-plugin-ci grunt
 
       - name: Run phpunit
         if: ${{ always() }}
-        run: moodle-plugin-ci phpunit
-
-      - name: Run behat
-        if: ${{ always() }}
-        run: moodle-plugin-ci behat --profile chrome
-
-      - name: PHP Copy/Paste Detector
-        continue-on-error: true # This step will show errors but will not fail
-        if: ${{ always() }}
-        run: moodle-plugin-ci phpcpd
-
-      - name: PHP Mess Detector
-        continue-on-error: true # This step will show errors but will not fail
-        if: ${{ always() }}
-        run: moodle-plugin-ci phpmd
+        run: |
+          moodle-plugin-ci phpunit
+          cd moodle
+          vendor/bin/phpunit --fail-on-risky --disallow-test-output --filter tool_dataprivacy_metadata_registry_testcase
+          vendor/bin/phpunit --fail-on-risky --disallow-test-output --testsuite core_privacy_testsuite --filter provider_testcase
